syntax = "proto3";
package protos;

option java_package = "com.uniledger.protos";
option java_outer_classname = "ContractExecuteLogs";

import "contract.proto";

message ContractExecuteLog{
    string ContractHashId = 1;
    // transaction.Relation.TaskId
    string TaskId = 2;
    // transaction timestamp
    string Timestamp = 3;
    // ContractComponents.Caption
    string Caption = 4;
    // ContractComponents.Cname
    string Cname = 5;
    // ContractComponents.Cname
    string Ctype = 6;
    // ContractComponents.Description
    string Description = 7;
    // ContractComponents.MetaAttribute
    map<string, string> MetaAttribute = 8;
    // ContractComponents.State
    string State = 9;
    // ContractBody.CreateTime
    string CreateTime = 10;
}

message ContractExecuteLogList {

    repeated ContractExecuteLog ContractLogs = 1;
}
